Fin de l'exercice demandé par Arnaud

--- a/hello.html
+++ b/hello.html
@@ -9,13 +9,35 @@
 
 	</head>
 	
-
 	<body>
 
 		<!-- TITRE -->
-		<div id="top-banner">
-			Bienvenue dans cette formation GIT !
-		</div>
+		<header id="top-banner">
+			<h1>Bienvenue dans cette formation GIT !</h1>
+		</header>
+
+		<main>
+			<div>
+				<h2>Ma description</h2>
+				<p>Bonjour, je m'appelle Fredy et je suis en train d'apprendre à utiliser git à nouveau</p>
+			</div>
+			<div>
+				<h2>Mes récompenses</h2>
+				<div id="medals">
+					<img class="medal medal-1" src="images/medal_bronze.png">
+					<img class="medal medal-2" src="images/medal_silver.png">
+					<img class="medal medal-3" src="images/medal_gold.png">
+				</div>
+			</div>
+			<div>
+				<h2>Mon gist</h2>
+				<script src="https://gist.github.com/fredy-ID/2d92f7691ec91cdeec930d959bff5a11.js"></script>
+			</div>
+			<div>
+				<h2>Mes commandes git</h2>
+				<p>git pull</p>
+			</div>
+		</main>
 		
 	</body>
 </html>
