FT0A.0 partie 1 etape 1 by afpar

--- a/hello.html
+++ b/hello.html
@@ -17,26 +17,54 @@
 		</header>
 
 		<main>
-			<div>
-				<h2>Ma description</h2>
-				<p>Bonjour, je m'appelle Fredy et je suis en train d'apprendre à utiliser git à nouveau</p>
-			</div>
-			<div>
-				<h2>Mes récompenses</h2>
-				<div id="medals">
-					<img class="medal medal-1" src="images/medal_bronze.png">
-					<img class="medal medal-2" src="images/medal_silver.png">
-					<img class="medal medal-3" src="images/medal_gold.png">
+			<section id="byarnaud">
+				<div>
+					<h2>Ma description</h2>
+					<p>Bonjour, je m'appelle Fredy et je suis en train d'apprendre à utiliser git à nouveau</p>
 				</div>
-			</div>
-			<div>
-				<h2>Mon gist</h2>
-				<script src="https://gist.github.com/fredy-ID/2d92f7691ec91cdeec930d959bff5a11.js"></script>
-			</div>
-			<div>
-				<h2>Mes commandes git</h2>
-				<p>git pull</p>
-			</div>
+				<div>
+					<h2>Mes récompenses</h2>
+					<div id="medals">
+						<img class="medal medal-1" src="images/medal_bronze.png">
+						<img class="medal medal-2" src="images/medal_silver.png">
+						<img class="medal medal-3" src="images/medal_gold.png">
+					</div>
+				</div>
+				<div>
+					<h2>Mon gist</h2>
+					<script src="https://gist.github.com/fredy-ID/2d92f7691ec91cdeec930d959bff5a11.js"></script>
+				</div>
+				<div>
+					<h2>Mes commandes git</h2>
+					<p>git pull</p>
+				</div>
+			</section>
+			<section id="byafpar">
+				<div id="identite" class="theme">
+					<h2>Mon identité</h2>
+					<div>
+						<p>Je suis Français et j'ai 25 ans</p>
+						<img src="images/wolf.jpg" alt="Un loup gris regardant au loin">
+					</div>
+				</div>
+				<div id="parcours" class="theme">
+					<h2>Mon Parcours</h2>
+					<div>
+						<p>Après mon bac STI2D, j'ai validé 2 formations sur le développement web m'apportant le titre professionnel de développeur web et web mobile. Aujourd'hui je suit une formation de développeur d'intelligence artificielle pour me spécialiser dans l'IA</p>
+						<img src="images/entrepreneur.png" alt="Un homme seul travaillant devant un ordinateur">
+					</div>
+				</div>
+				<div id="whoami" class="theme">
+					<h2>Mon WHOAMI</h2>
+					<div>
+						<p>Je fais 1 mètre 62, je pèse 62 kilos, je suis noir aux yeux noir avec une tête bien ronde et je porte des lunette</p>
+						<p>J'aime le sport et les chiens mais j'ai surtout de la curiosité pour tout ce qui bouge (ou qui ne bouge pas 🤫)</p>
+						<img src="images/fairy-tale.jpg" alt="un loup gris dans une forêt se dirigeant vers un panier de fruit abandonné">
+					</div>
+				</div>
+			</section>
+			
+
 		</main>
 		
 	</body>
