--- a/hello.html
+++ b/hello.html
@@ -16,7 +16,7 @@
 			<h1>Bienvenue dans cette formation GIT !</h1>
 		</header>
 
-		<main>
+		<main class="project">
 			<section id="byarnaud">
 				<div>
 					<h2>Ma description</h2>
@@ -38,7 +38,8 @@
 					<h2>Mes commandes git</h2>
 					<p>git pull</p>
 				</div>
-			</section>
+			</section>simplo
+
 			<section id="byafpar">
 				<div id="identite" class="theme">
 					<h2>Mon identité</h2>
