--- a/hello.html
+++ b/hello.html
@@ -11,9 +11,13 @@
 	
 	<body>
 
+		<nav id="navigation">
+			<ul></ul>
+		</nav>
+		
 		<!-- TITRE -->
 		<header id="top-banner">
-			<h1>Bienvenue dans cette formation GIT !</h1>
+			<h1>Ce que j'avait mis</h1>
 		</header>
 
 		<main class="project">
@@ -68,5 +72,6 @@
 
 		</main>
 		
+		<script src="index.js"></script>
 	</body>
 </html>
